[#387] Create pluggable scheduling policies
# New features and improvements

Wasp now supports pluggable scheduling strategies, three strategies are available

`it.agilelab.bigdata.wasp.consumers.spark.streaming.actor.master.FifoSchedulingStrategyFactory`

`it.agilelab.bigdata.wasp.consumers.spark.streaming.actor.master.LowestUUIDNodeSchedulingStrategyFactory`

`it.agilelab.bigdata.wasp.consumers.spark.streaming.actor.master.NodeLabelsSchedulingStrategyFactory`

To configure your scheduling strategy add this section to `wasp.spark-streaming`

```hocon
scheduling-strategy {
      class-name = "Factory class name"
      additional-parameter = "parameter value"
}
```

## FifoSchedulingStrategyFactory

Deployment type: ACTIVE/ACTIVE

This strategy will select nodes in fifo order, if we have 3 nodes they will be selected in a round robin fashion

### Additional configurations

None

### Example

```hocon
wasp.spark-streaming.scheduling-strategy {
      class-name = "it.agilelab.bigdata.wasp.consumers.spark.streaming.actor.master.FifoSchedulingStrategyFactory"
}
```

## LowestUUIDNodeSchedulingStrategyFactory

Deployment type: ACTIVE/PASSIVE

This strategy will select always the node with lowest uuid

### Additional configurations

None

### Example

```hocon
wasp.spark-streaming.scheduling-strategy {
      class-name = "it.agilelab.bigdata.wasp.consumers.spark.streaming.actor.master.LowestUUIDNodeSchedulingStrategyFactory"
}
```

## NodeLabelsSchedulingStrategyFactory

Deployment type: ACTIVE/ACTIVE

This strategy will select nodes that have all the labels specified in the PipegraphModel as cluster roles.

if you have a pipegraph with labels `Set("freecode", "fast-node")` this strategy will only schedule it on a node that has `freecode` and `fast-node` roles in addition to `consumers-streaming` role, if multiple nodes satisfy this constraint this strategy will use one of the other strategy as tie breaker

### Additional configurations

`tie-breaker` another section with
